src/test/ui/consts/const-extern-fn/const-extern-fn-call-extern-fn.stderr
error[E0723]: can only call other `const fn` within a `const fn`, but `regular_in_block` is not stable as `const fn`
  --> $DIR/const-extern-fn-call-extern-fn.rs:9:9
   |
LL |         regular_in_block();
   |         ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error[E0723]: can only call other `const fn` within a `const fn`, but `regular` is not stable as `const fn`
  --> $DIR/const-extern-fn-call-extern-fn.rs:18:9
   |
LL |         regular();
   |         ^^^^^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0723`.
